@@ -1,6 +1,4 @@
-DIST Image-ExifTool-7.89.tar.gz 2197428 RMD160 9a5a661d6ccdc896cf9c26dfe18f0cfafc7283c2 SHA1 5fda5eeb02a5b272b89c49a4c11aba8df9849876 SHA256 f22cb3037d1cfe3c9457fc5dee9d550d0b234fa9665c013c2c6c80e13b571e04
 DIST Image-ExifTool-8.15.tar.gz 2801361 RMD160 dc4e1d991f4430bcde08fd122bfba2c9deec0d0c SHA1 af5b571d66ed4179b704f4cfa57dc8f87f630a8c SHA256 a85fb66a2a54c6893addf68698bb89db0541b27638e2ef44381797ad9aa805c4
-EBUILD Image-ExifTool-7.89.ebuild 338 RMD160 402c0b1cbbf1a9d6bfdad219d0d2ed5b9d0feb8b SHA1 171a6b5239814e4f2ba163234f2267ffcd5fa04c SHA256 0f4258caa3ed6494c2a07bfc0cd4c11abbe50064606b27ab58f05f0525a1722a
 EBUILD Image-ExifTool-8.15.ebuild 338 RMD160 402c0b1cbbf1a9d6bfdad219d0d2ed5b9d0feb8b SHA1 171a6b5239814e4f2ba163234f2267ffcd5fa04c SHA256 0f4258caa3ed6494c2a07bfc0cd4c11abbe50064606b27ab58f05f0525a1722a
-MISC ChangeLog 378 RMD160 2add1eb712251d7b51b79772ff40ff6e96347999 SHA1 eccf66e1eda7dc42ca19accda38d3a0a7e3b92bd SHA256 3db7be6f07077f0667efb472d24d4e65d9fe238f51be0bf3d07bf81f3d733403
+MISC ChangeLog 484 RMD160 620ac95f688d661341e9eaa54b9bd321f2492a81 SHA1 e14254ad88880de48a0a61e80e81468695f557f0 SHA256 074607768b105c148d307ef5065b339d554dd054dc4532c17978072e1424d83b
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
