@@ -3,6 +3,10 @@
 # $Header: $
 
   23 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -Image-ExifTool-7.89.ebuild:
+  delete old version
+
+  23 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +Image-ExifTool-8.15.ebuild:
   version bump
 
